--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-	"name": "node-js-getting-started",
-	"version": "0.1.2",
-	"description": "A sample Node.js app using Express 4",
-	"main": "index.js",
+	"name": "Jake's Bot",
+	"version": "1.0.0",
+	"description": "Jake's robot replacement",
+	"main": "bot.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node bot.js"
 	},
 	"dependencies": {
-		"director": ""
+		"axios": "^1.6.8",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.2"
 	},
 	"engines": {
-		"node": "0.10.x"
+		"node": ">=18.0.0"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/heroku/node-js-getting-started"
+		"url": "https://github.com/TheBiggestOfBoys/bot-tutorial-nodejs"
 	},
 	"keywords": [
-		"node",
+		"bot",
+		"express",
+		"groupme",
 		"heroku",
-		"express"
+		"node"
 	],
 	"license": "MIT"
 }
