--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
-BOT_ID="e1d52f8653ac525fcff3f8afe2"
+# Example environment variables for Jake's Bot
+
+BOT_ID="your_groupme_bot_id"
 RESPONSE_PROBABILITY=0.1
 CALLOUT_PROBABILITY=0.05
 INCLUDE_TEXT_PROBABILITY=0.5
