fixed "quotifying" and "hardly know her", also added a few more quotes and images

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BOT_ID="de7b9e2d4f6734f3e993ba22d5"
 RESPONSE_PROBABILITY=0.05
+QUOTIFY_PROBABILITY=0.025
 CALLOUT_PROBABILITY=0.05
 INCLUDE_TEXT_PROBABILITY=0.5
 INCLUDE_MEDIA_PROBABILITY=0.5
