--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 BOT_ID="de7b9e2d4f6734f3e993ba22d5"
 RESPONSE_PROBABILITY=0.05
 QUOTIFY_PROBABILITY=0.025
+HARDLY_KNOW_HER_PROBABILITY=0.1
 CALLOUT_PROBABILITY=0.05
 INCLUDE_TEXT_PROBABILITY=0.5
 INCLUDE_MEDIA_PROBABILITY=0.5
