--- a/example.env
+++ b/example.env
@@ -2,6 +2,8 @@
 
 BOT_ID="your_groupme_bot_id"
 RESPONSE_PROBABILITY=0.1
+QUOTIFY_PROBABILITY=0.1
+HARDLY_KNOW_HER_PROBABILITY=0.1
 CALLOUT_PROBABILITY=0.05
 INCLUDE_TEXT_PROBABILITY=0.5
 INCLUDE_MEDIA_PROBABILITY=0.5
