--- a/example.env
+++ b/example.env
@@ -1,6 +1,11 @@
 # Example environment variables for Jake's Bot
 
 BOT_ID="your_groupme_bot_id"
+
+# Needed for API Calls
+GROUP_ID="your_group_id"
+ACCESS_TOKEN="your_access_token"
+
 RESPONSE_PROBABILITY=0.1
 QUOTIFY_PROBABILITY=0.1
 HARDLY_KNOW_HER_PROBABILITY=0.1
